--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="container">
                             <div class="input-box" id="input-box-fname">
                                 <input type="text" name="firstName" id="firstName" class="input-field" placeholder="First Name" maxlength="15" />
-                                <img class="error-icon" id="error-icon-fname" src="/assets/image/icon-error.svg" alt="">
+                                <img class="error-icon" id="error-icon-fname" src="assets/image/icon-error.svg" alt="">
                             </div>
                             <p class="error-message" id="fname-error"></p>
                         </div>
@@ -35,7 +35,7 @@
                         <div class="container">
                             <div class="input-box" id="input-box-lname">
                                 <input type="text" name="lastName" id="lastName" class="input-field" placeholder="Last Name" maxlength="15"/> 
-                                <img class="error-icon" id="error-icon-lname" src="/assets/image/icon-error.svg" alt="" >
+                                <img class="error-icon" id="error-icon-lname" src="assets/image/icon-error.svg" alt="" >
                             </div>
                             <p class="error-message" id="lname-error"></p>
                         </div>
@@ -44,7 +44,7 @@
                             <div class="input-box" id="input-box-email">
                                 <input type="email" name="email" id="email" class="input-field" placeholder="Email" maxlength="45"/> 
                                 <input type="email" name="email" id="email2" class="input-field" placeholder="email@example.com" maxlength="45"/> 
-                                <img class="error-icon" id="error-icon-email" src="/assets/image/icon-error.svg" alt="">
+                                <img class="error-icon" id="error-icon-email" src="assets/image/icon-error.svg" alt="">
                             </div> 
                             <p class="error-message" id="email-error"></p>
                         </div>
@@ -53,7 +53,7 @@
                              <div class="input-box" id="input-box-psw" onmouseover="switchIcon()" onmouseleave="reverseIcon()">
                             <input type="password" name="password" id="password"  placeholder="Password" maxlength="20" />
                                 <button type="button" id="icon-btn" onclick="toggleIcon()"><i class="fa fa-eye-slash" id="icon1" ></i><i class="fa fa-eye" id="icon2"></i></button>
-                                <img class="error-icon" id="error-icon-psw" src="/assets/image/icon-error.svg" alt="">
+                                <img class="error-icon" id="error-icon-psw" src="assets/image/icon-error.svg" alt="">
                             </div> 
                             <p class="error-message" id="psw-error"></p> 
                         </div>
